[gd_scene load_steps=3 format=3 uid="uid://dunrj47lgc46m"]

[ext_resource type="Script" path="res://UI/PauseMenu.gd" id="1_ddc21"]
[ext_resource type="PackedScene" uid="uid://cg0t4c3b7afwj" path="res://OptionScene.tscn" id="2_dqn5x"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddc21")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -86.0
offset_right = 96.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -70.0
offset_right = 84.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "KEY_PAUSEMENU_PAUSED"
horizontal_alignment = 1

[node name="resumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "KEY_PAUSEMENU_RESUME"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "KEY_PAUSEMUNU_OPTION"

[node name="titleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "KEY_PAUSEMUNU_TITLE"

[node name="exitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "KEY_PAUSEMUNU_EXIT"

[node name="OptionScene" parent="." instance=ExtResource("2_dqn5x")]
visible = false
position = Vector2(80, 32)

[connection signal="pressed" from="VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/titleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
